"fix header text-align"

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -20,7 +20,6 @@ header {
   border-bottom: 1px solid seashell;
   position: fixed;
   z-index: 1;
-  text-align:
 }
 .logo {
   padding-left: 10px;
